--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WhatchaDoin">
-        <activity android:name=".ui.grocery.EditGrocery"></activity>
         <activity android:name=".ui.statistic.StatisticActivity" />
         <activity android:name=".ui.grocery.GroceryActivity" />
         <activity android:name=".ui.tag.TagActivity" />
+        <activity android:name=".ui.grocery.EditGroceryActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
