--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WhatchaDoin">
-        <activity android:name=".ui.statistic.StatisticActivity"></activity>
+        <activity android:name=".ui.tag.UpdateTagActivity"></activity>
+        <activity android:name=".ui.tag.AddTagActivity" />
+        <activity android:name=".ui.statistic.StatisticActivity" />
         <activity android:name=".ui.grocery.GroceryActivity" />
         <activity android:name=".ui.tag.TagActivity" />
         <activity
