--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WhatchaDoin">
+        <activity android:name=".ui.item.ItemActivity"></activity>
         <activity android:name=".ui.statistic.StatisticActivity" />
         <activity android:name=".ui.grocery.GroceryActivity" />
         <activity android:name=".ui.tag.TagActivity" />
