--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WhatchaDoin">
-        <activity android:name=".ui.tag.UpdateTagActivity"></activity>
+        <activity android:name=".ui.tag.testActivity"></activity>
+        <activity android:name=".ui.tag.UpdateTagActivity" />
         <activity android:name=".ui.tag.AddTagActivity" />
         <activity android:name=".ui.statistic.StatisticActivity" />
         <activity android:name=".ui.grocery.GroceryActivity" />
@@ -23,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
